edit readme, fixed context menu z-index

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -195,6 +195,7 @@ grid-gap: $padding-page;
   box-shadow: $shadow;
   display: flex;
   flex-direction: column;
+  z-index: 999;
   
   p {
     margin-bottom: 1rem;
